# XNAT-uploader-webapp

./: README.md  XNAT_MRS_webapp.py  XNAT_webapp_login.py  XNATwebapp_twix.py  pyproject.toml
src/xnat_mrs_uploader/: app.py
src/xnat_mrs_uploader.egg-info/: PKG-INFO
